<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/mainToolbar"
                layout="@layout/toolbar_activity_main" />
            <ViewStub
                android:id="@+id/cab_stub"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize" />
        </FrameLayout>
        <android.support.design.widget.TabLayout
            android:id="@+id/mainTabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:layout_anchor="@+id/toolbar"
            app:layout_anchorGravity="bottom"
            app:tabBackground="@drawable/tab_select_colors"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/gray"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabMaxWidth="0dp">

            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat" />
            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_share" />
            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history" />
            <android.support.design.widget.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification" />
        </android.support.design.widget.TabLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/mainViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openCreateGroup"
        app:layout_anchor="@+id/root"
        app:layout_anchorGravity="bottom|right"
        app:backgroundTint="@color/light_green"
        app:srcCompat="@drawable/icon_group_add" />
</android.support.design.widget.CoordinatorLayout>